crates/nuxie-renderer-ffi/src/native.rs


    fn draw_image_mesh(
        &mut self,
        image: Option<&dyn RenderImage>,
        sampler: ImageSampler,
        vertices: Option<&dyn RenderBuffer>,
        uv_coords: Option<&dyn RenderBuffer>,
        indices: Option<&dyn RenderBuffer>,
        vertex_count: u32,
        index_count: u32,
        blend_mode: BlendMode,
        opacity: f32,
    ) {
        unsafe {
            ffi::rive_ffi_renderer_draw_image_mesh(
                self.renderer.as_ptr(),
                image
                    .map(ffi_image)
                    .map(|image| image.handle.as_ptr())
                    .unwrap_or(std::ptr::null_mut()),
                sampler.as_key(),
                vertices
                    .map(ffi_buffer)
                    .map(|buffer| buffer.handle.as_ptr())
                    .unwrap_or(std::ptr::null_mut()),
                uv_coords
                    .map(ffi_buffer)
                    .map(|buffer| buffer.handle.as_ptr())
                    .unwrap_or(std::ptr::null_mut()),
                indices
                    .map(ffi_buffer)
                    .map(|buffer| buffer.handle.as_ptr())
                    .unwrap_or(std::ptr::null_mut()),
                vertex_count,
                index_count,
                blend_mode as u8,
                opacity,
            )
        };
    }

    fn modulate_opacity(&mut self, opacity: f32) {
        unsafe { ffi::rive_ffi_renderer_modulate_opacity(self.renderer.as_ptr(), opacity) };
    }
}

struct FfiRenderShader {
    handle: NonNull<ffi::RenderShader>,
}

impl Drop for FfiRenderShader {
    fn drop(&mut self) {
        unsafe { ffi::rive_ffi_render_shader_delete(self.handle.as_ptr()) };
    }
}

impl RenderShader for FfiRenderShader {
    fn as_any(&self) -> &dyn Any {
        self
    }
}

struct FfiRenderImage {
    handle: NonNull<ffi::RenderImage>,
}

impl Drop for FfiRenderImage {
    fn drop(&mut self) {
        unsafe { ffi::rive_ffi_render_image_delete(self.handle.as_ptr()) };
    }
}

impl RenderImage for FfiRenderImage {
    fn as_any(&self) -> &dyn Any {
        self
    }

    fn width(&self) -> u32 {
        unsafe { ffi::rive_ffi_render_image_width(self.handle.as_ptr()) }
    }

    fn height(&self) -> u32 {
        unsafe { ffi::rive_ffi_render_image_height(self.handle.as_ptr()) }
    }
}

struct FfiRenderPaint {
    handle: NonNull<ffi::RenderPaint>,
}

impl Drop for FfiRenderPaint {
    fn drop(&mut self) {
        unsafe { ffi::rive_ffi_render_paint_delete(self.handle.as_ptr()) };
    }
}

impl RenderPaint for FfiRenderPaint {
    fn as_any(&self) -> &dyn Any {
        self
    }

    fn style(&mut self, style: RenderPaintStyle) {
        let style = match style {
            RenderPaintStyle::Stroke => 0,
            RenderPaintStyle::Fill => 1,
        };
        unsafe { ffi::rive_ffi_render_paint_style(self.handle.as_ptr(), style) };
    }

    fn color(&mut self, value: ColorInt) {
        unsafe { ffi::rive_ffi_render_paint_color(self.handle.as_ptr(), value) };
    }

    fn thickness(&mut self, value: f32) {
        unsafe { ffi::rive_ffi_render_paint_thickness(self.handle.as_ptr(), value) };
    }

    fn join(&mut self, value: StrokeJoin) {
        unsafe { ffi::rive_ffi_render_paint_join(self.handle.as_ptr(), value as u32) };
    }

    fn cap(&mut self, value: StrokeCap) {
        unsafe { ffi::rive_ffi_render_paint_cap(self.handle.as_ptr(), value as u32) };
    }

    fn feather(&mut self, value: f32) {
        unsafe { ffi::rive_ffi_render_paint_feather(self.handle.as_ptr(), value) };
    }

    fn blend_mode(&mut self, value: BlendMode) {
        unsafe { ffi::rive_ffi_render_paint_blend_mode(self.handle.as_ptr(), value as u8) };
    }

    fn shader(&mut self, shader: Option<&dyn RenderShader>) {
        let shader = shader
            .map(ffi_shader)
            .map(|shader| shader.handle.as_ptr())
            .unwrap_or(std::ptr::null_mut());
        unsafe { ffi::rive_ffi_render_paint_shader(self.handle.as_ptr(), shader) };
    }

    fn invalidate_stroke(&mut self) {
        unsafe { ffi::rive_ffi_render_paint_invalidate_stroke(self.handle.as_ptr()) };
    }
}

struct FfiRenderPath {
    handle: NonNull<ffi::RenderPath>,
}

impl Drop for FfiRenderPath {
    fn drop(&mut self) {
        unsafe { ffi::rive_ffi_render_path_delete(self.handle.as_ptr()) };
    }
}

impl RenderPath for FfiRenderPath {
    fn as_any(&self) -> &dyn Any {
        self
    }

    fn rewind(&mut self) {
        unsafe { ffi::rive_ffi_render_path_rewind(self.handle.as_ptr()) };
    }

    fn fill_rule(&mut self, value: FillRule) {
        unsafe { ffi::rive_ffi_render_path_fill_rule(self.handle.as_ptr(), value as u8) };
    }

    fn add_render_path(&mut self, path: &dyn RenderPath, transform: Mat2D) {
        unsafe {
            ffi::rive_ffi_render_path_add_render_path(
                self.handle.as_ptr(),
                ffi_path(path).handle.as_ptr(),
                transform.into(),
            )
        };
    }

    fn add_render_path_backwards(&mut self, path: &dyn RenderPath, transform: Mat2D) {
        unsafe {
            ffi::rive_ffi_render_path_add_render_path_backwards(
                self.handle.as_ptr(),
                ffi_path(path).handle.as_ptr(),
                transform.into(),
            )
        };
    }

    fn add_raw_path(&mut self, path: &RawPath) {
        let (verbs, points) = raw_path_parts(path);
        unsafe {
            ffi::rive_ffi_render_path_add_raw_path(
                self.handle.as_ptr(),
                verbs.as_ptr(),
                verbs.len(),
                points.as_ptr(),
                points.len(),
            )
        };
    }

    fn move_to(&mut self, x: f32, y: f32) {
        unsafe { ffi::rive_ffi_render_path_move_to(self.handle.as_ptr(), x, y) };
    }

    fn line_to(&mut self, x: f32, y: f32) {
        unsafe { ffi::rive_ffi_render_path_line_to(self.handle.as_ptr(), x, y) };
    }

    fn cubic_to(&mut self, ox: f32, oy: f32, ix: f32, iy: f32, x: f32, y: f32) {
        unsafe { ffi::rive_ffi_render_path_cubic_to(self.handle.as_ptr(), ox, oy, ix, iy, x, y) };
    }

    fn close(&mut self) {
        unsafe { ffi::rive_ffi_render_path_close(self.handle.as_ptr()) };
    }
}

struct FfiRenderBuffer {
    handle: NonNull<ffi::RenderBuffer>,
    buffer_type: RenderBufferType,
    flags: RenderBufferFlags,
    bytes: Vec<u8>,
}

impl Drop for FfiRenderBuffer {
    fn drop(&mut self) {
        unsafe { ffi::rive_ffi_render_buffer_delete(self.handle.as_ptr()) };
    }
}

impl RenderBuffer for FfiRenderBuffer {
    fn as_any(&self) -> &dyn Any {
        self
    }

    fn buffer_type(&self) -> RenderBufferType {
        self.buffer_type
    }

    fn flags(&self) -> RenderBufferFlags {
        self.flags
    }

    fn size_in_bytes(&self) -> usize {
        self.bytes.len()
    }

    fn map_mut(&mut self) -> &mut [u8] {
        &mut self.bytes
    }

    fn unmap(&mut self) {
        unsafe {
            ffi::rive_ffi_render_buffer_write(
                self.handle.as_ptr(),
                self.bytes.as_ptr(),
                self.bytes.len(),
            )
        };
    }
}

fn raw_path_parts(path: &RawPath) -> (Vec<u8>, Vec<FfiVec2D>) {
    (
        path.verbs().iter().map(|verb| *verb as u8).collect(),
        path.points().iter().copied().map(Into::into).collect(),
    )
}

fn non_null<T>(ptr: *mut T, function: &str) -> NonNull<T> {
    NonNull::new(ptr).unwrap_or_else(|| panic!("{function} returned null"))
}

fn ffi_shader(shader: &dyn RenderShader) -> &FfiRenderShader {
    shader
        .as_any()
        .downcast_ref::<FfiRenderShader>()
        .expect("nuxie-renderer-ffi requires FfiRenderShader")
}

fn ffi_image(image: &dyn RenderImage) -> &FfiRenderImage {
    image
        .as_any()
        .downcast_ref::<FfiRenderImage>()
        .expect("nuxie-renderer-ffi requires FfiRenderImage")
}

fn ffi_paint(paint: &dyn RenderPaint) -> &FfiRenderPaint {
    paint
        .as_any()
        .downcast_ref::<FfiRenderPaint>()
        .expect("nuxie-renderer-ffi requires FfiRenderPaint")
}

fn ffi_path(path: &dyn RenderPath) -> &FfiRenderPath {
    path.as_any()
        .downcast_ref::<FfiRenderPath>()
        .expect("nuxie-renderer-ffi requires FfiRenderPath")
}

fn ffi_buffer(buffer: &dyn RenderBuffer) -> &FfiRenderBuffer {
    buffer
        .as_any()
        .downcast_ref::<FfiRenderBuffer>()
        .expect("nuxie-renderer-ffi requires FfiRenderBuffer")
}

#[repr(C)]
#[derive(Clone, Copy)]
struct FfiVec2D {
    x: f32,
    y: f32,
}

impl From<Vec2D> for FfiVec2D {
    fn from(value: Vec2D) -> Self {
        Self {
            x: value.x,
            y: value.y,
        }
    }
}

#[repr(C)]
#[derive(Clone, Copy)]
struct FfiMat2D {
    values: [f32; 6],
}

impl From<Mat2D> for FfiMat2D {
    fn from(value: Mat2D) -> Self {
        Self { values: value.0 }
    }
}

mod ffi {
    use super::{FfiMat2D, FfiVec2D};
    use std::ffi::c_void;

    pub type Context = c_void;
    pub type Renderer = c_void;
    pub type RenderPath = c_void;
    pub type RenderPaint = c_void;
    pub type RenderShader = c_void;
    pub type RenderImage = c_void;
    #[cfg(feature = "decode-oracle")]
    pub type DecodedBitmap = c_void;
    pub type RenderBuffer = c_void;

    unsafe extern "C" {
        pub fn rive_ffi_context_make_null(width: u32, height: u32) -> *mut Context;
        pub fn rive_ffi_context_make_metal(width: u32, height: u32) -> *mut Context;
        pub fn rive_ffi_context_delete(context: *mut Context);
        pub fn rive_ffi_context_begin_frame_mode(
            context: *mut Context,
            width: u32,
            height: u32,
            clear_color: u32,
            mode: u32,
        ) -> i32;
        pub fn rive_ffi_context_end_frame(context: *mut Context);
        pub fn rive_ffi_context_read_pixels(
            context: *mut Context,
            out: *mut u8,
            len: usize,
        ) -> usize;
        pub fn rive_ffi_context_draw_count(context: *mut Context) -> u64;
        pub fn rive_ffi_context_renderer(context: *mut Context) -> *mut Renderer;
        pub fn rive_ffi_renderer_delete(renderer: *mut Renderer);

        pub fn rive_ffi_make_linear_gradient(
            context: *mut Context,
            sx: f32,
            sy: f32,
            ex: f32,
            ey: f32,
            colors: *const u32,
            stops: *const f32,
            count: usize,
        ) -> *mut RenderShader;
        pub fn rive_ffi_make_radial_gradient(
            context: *mut Context,
            cx: f32,
            cy: f32,
            radius: f32,
            colors: *const u32,
            stops: *const f32,
            count: usize,
        ) -> *mut RenderShader;
        pub fn rive_ffi_render_shader_delete(shader: *mut RenderShader);
